fix: add flex wrap

--- a/image-gallery/style.css
+++ b/image-gallery/style.css
@@ -58,6 +58,7 @@ footer a img {
 
 .header-content {
     position: relative;
+    flex-wrap: wrap;
 }
 
 .main-content {
